# data-processor-example

./: README.md
qt-data-processor-example/: .gitignore  CMakeLists.txt  README.md  local.cmake.template
qt-data-processor-example/src/: CMakeLists.txt  CommunicationHandler.cpp  CommunicationHandler.h  Configuration.cpp  Configuration.h  EventProcessor.cpp  EventProcessor.h  main.cpp
qt-data-processor-example/src/util/: JsonUtil.cpp
qt-data-processor-example/test/: CMakeLists.txt
